Update description of the element

--- a/address-autocomplete.html
+++ b/address-autocomplete.html
@@ -12,7 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../paper-input/paper-input.html">
 
 <!--
-An address form Polymer element that offers suggestions from the Google Maps API as you type.
+A Polymer address form element that offers suggestions from the Google Maps API as you type.
 
 Example:
 
